--- a/.gitignore
+++ b/.gitignore
@@ -482,3 +482,7 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+/cc-cmake-build-debug/
+/cc-cmake-build-release/
+/results/
