1. move in enque 2. fixed -pthread 3. removed unnecessary files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,17 +5,13 @@ cmake_minimum_required(VERSION 3.15)
 #! CHANGE YOUR PROJECT NAME
 #  It is used as your project's main executable name.
 set(PROJECT_NAME counter)
-project(${PROJECT_NAME} C CXX) # project(${PROJECT_NAME} C CXX ASM)
+project(${PROJECT_NAME} C CXX)
 
 set(CMAKE_CXX_STANDARD 17)
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
 ##########################################################
 # Other variables
 ##########################################################
-
-set(TEST_EXECUTABLE test_ts_queue)
-#set(ONE_THREAD_EXE serial)
 
 ##########################################################
 # User configurable options of the template
@@ -65,24 +61,11 @@ include(cmake/CompilerWarnings.cmake)
 #! Project main executable source compilation
 add_executable(${PROJECT_NAME} src/main.cpp
 		src/options_parser.cpp src/options_parser.h
-		src/thread_safe_queue.cpp src/thread_safe_queue.h
+		src/thread_safe_queue.h
 		src/time_measurement.h src/files_methods.h src/files_methods.cpp
 		src/write_in_file.h src/write_in_file.cpp
 		src/thread_functions.h src/thread_functions.cpp
 		src/errors.h)
-
-#add_executable(${ONE_THREAD_EXE} src/serial.cpp
-#        src/options_parser.cpp src/options_parser.h
-#        src/methods.h src/integration_structures.h)
-#
-add_executable(${TEST_EXECUTABLE} tests/test_ts_queue.cpp
-		src/options_parser.cpp src/options_parser.h
-		src/thread_safe_queue.cpp src/thread_safe_queue.h)
-
-#! Put path to your project headers
-target_include_directories(${PROJECT_NAME} PRIVATE options_parser)
-target_include_directories(${TEST_EXECUTABLE} PRIVATE options_parser)
-#target_include_directories(${ONE_THREAD_EXE} PRIVATE options_parser)
 
 #! Add external packages
 # options_parser requires boost::program_options library
@@ -91,11 +74,9 @@ find_package(Boost 1.71.0 COMPONENTS program_options system REQUIRED)
 target_include_directories(${PROJECT_NAME} PRIVATE ${Boost_INCLUDE_DIR})
 target_link_libraries(${PROJECT_NAME} Boost::program_options Boost::system)
 
-target_include_directories(${TEST_EXECUTABLE} PRIVATE ${Boost_INCLUDE_DIR})
-target_link_libraries(${TEST_EXECUTABLE} Boost::program_options Boost::system)
+find_package(Threads REQUIRED)
 
-#target_include_directories(${ONE_THREAD_EXE} PRIVATE ${Boost_INCLUDE_DIR})
-#target_link_libraries(${ONE_THREAD_EXE} Boost::program_options Boost::system)
+target_link_libraries("${PROJECT_NAME}" ${CMAKE_THREAD_LIBS_INIT})
 
 ##########################################################
 # Fixed CMakeLists.txt part
